--- a/code/ch02/ch02.ipynb
+++ b/code/ch02/ch02.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -43,15 +43,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The watermark extension is already loaded. To reload it, use:\n",
+      "  %reload_ext watermark\n",
       "Sebastian Raschka \n",
-      "last updated: 2016-10-12 \n",
+      "last updated: 2016-11-24 \n",
       "\n",
       "CPython 3.5.2\n",
       "IPython 5.1.0\n",
       "\n",
-      "numpy 1.11.1\n",
+      "numpy 1.11.2\n",
       "pandas 0.18.1\n",
-      "matplotlib 1.5.1\n"
+      "matplotlib 1.5.3\n"
      ]
     }
    ],
@@ -1633,7 +1635,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
