fixed underscore formatting

--- a/docs/equations/pymle-equations.tex
+++ b/docs/equations/pymle-equations.tex
@@ -13,7 +13,7 @@
 
 \title{Python Machine Learning\\ Equation Reference}
 \author{Sebastian Raschka \\ \texttt{mail@sebastianraschka.com}} 
-\date{ \vspace{2cm} 05\slash 04\slash 2015 (last updated: 11\slash 3\slash 2016) \\\begin{flushleft} \vspace{2cm}  \noindent\rule{10cm}{0.4pt} \\ Code Repository and Resources:: \href{https://github.com/rasbt/python-machine-learning-book}{https://github.com/rasbt/python-machine-learning-book} \vspace{2cm} \endgraf @book\{raschka2015python,\\
+\date{ \vspace{2cm} 05\slash 04\slash 2015 (last updated: 11\slash 29\slash 2016) \\\begin{flushleft} \vspace{2cm}  \noindent\rule{10cm}{0.4pt} \\ Code Repository and Resources:: \href{https://github.com/rasbt/python-machine-learning-book}{https://github.com/rasbt/python-machine-learning-book} \vspace{2cm} \endgraf @book\{raschka2015python,\\
   title=\{Python Machine Learning\},\\
   author=\{Raschka, Sebastian\},\\
   year=\{2015\},\\
@@ -972,7 +972,7 @@ Using the mean vectors, we can now compute the within-class scatter matrix $\mat
 \mathbf{S}_W = \sum^{c}_{i=1} \mathbf{S}_i
 \]
 
-This is calculated by summing up the individual scatter matrices Si of each
+This is calculated by summing up the individual scatter matrices $S_i$ of each
 individual class $i$:
 
 \[
