new ipynb internal link formatting

--- a/code/ch05/ch05.ipynb
+++ b/code/ch05/ch05.ipynb
@@ -101,8 +101,8 @@
     "- [Using kernel principal component analysis for nonlinear mappings](#Using-kernel-principal-component-analysis-for-nonlinear-mappings)\n",
     "  - [Kernel functions and the kernel trick](#Kernel-functions-and-the-kernel-trick)\n",
     "  - [Implementing a kernel principal component analysis in Python](#Implementing-a-kernel-principal-component-analysis-in-Python)\n",
-    "    - [Example 1 – separating half-moon shapes](#Example-1-–-separating-half-moon-shapes)\n",
-    "    - [Example 2 – separating concentric circles](#Example-2-–-separating-concentric-circles)\n",
+    "    - [Example 1 – separating half-moon shapes](#Example-1:-Separating-half-moon-shapes)\n",
+    "    - [Example 2 – separating concentric circles](#Example-2:-Separating-concentric-circles)\n",
     "  - [Projecting new data points](#Projecting-new-data-points)\n",
     "  - [Kernel principal component analysis in scikit-learn](#Kernel-principal-component-analysis-in-scikit-learn)\n",
     "- [Summary](#Summary)"
