--- a/code/ch02/ch02.ipynb
+++ b/code/ch02/ch02.ipynb
@@ -268,7 +268,7 @@
     "    w_ : 1d-array\n",
     "        Weights after fitting.\n",
     "    errors_ : list\n",
-    "        Number of misclassifications in every epoch.\n",
+    "        Number of misclassifications (updates) in each epoch.\n",
     "\n",
     "    \"\"\"\n",
     "    def __init__(self, eta=0.01, n_iter=10):\n",
@@ -1042,8 +1042,8 @@
     "    -----------\n",
     "    w_ : 1d-array\n",
     "        Weights after fitting.\n",
-    "    errors_ : list\n",
-    "        Number of misclassifications in every epoch.\n",
+    "    cost_ : list\n",
+    "        Sum-of-squares cost function value in each epoch.\n",
     "\n",
     "    \"\"\"\n",
     "    def __init__(self, eta=0.01, n_iter=50):\n",
@@ -1282,8 +1282,9 @@
     "    -----------\n",
     "    w_ : 1d-array\n",
     "        Weights after fitting.\n",
-    "    errors_ : list\n",
-    "        Number of misclassifications in every epoch.\n",
+    "    cost_ : list\n",
+    "        Sum-of-squares cost function value averaged over all\n",
+    "        training samples in each epoch.\n",
     "    shuffle : bool (default: True)\n",
     "        Shuffles training data every epoch if True to prevent cycles.\n",
     "    random_state : int (default: None)\n",
