--- a/code/ch02/ch02.ipynb
+++ b/code/ch02/ch02.ipynb
@@ -400,7 +400,7 @@
     "which is the same as\n",
     "\n",
     "```\n",
-    "| 2  3 |   | 4 |          | 2*2 + 3*3 |          | 13 + bias |   | 17 |\n",
+    "| 2  3 |                  | 2*2 + 3*3 |          | 13 + bias |   | 17 |\n",
     "| 4  5 | x | 2 | + bias = | 4*2 + 5*3 | + bias = | 23 + bias | = | 27 |\n",
     "| 6  7 |   | 3 |          | 6*2 + 7*3 |          | 33 + bias |   | 37 |\n",
     "\n",
@@ -1635,6 +1635,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
